# flask-op

./: .gcloudignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Makefile  README.md  main.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: appengine.yml  pullrequest.yml
docker/: Dockerfile  config.py  gunicorn_starter.sh
flask_op/: ClientRPSQLWrapper.py  config.py  flask_op.py  models.py  sqlauthenticator.py  sqlwrapper.py  usersqlwrapper.py
flask_op/model/: __init__.py  client_rp_sql_wrapper.py  user_sql_wrapper.py
flask_op/templates/: login.jinja2  scope_claims.jinja2
flask_op/views/: __init__.py  oidc.py
flask_rp/: README.md  app_rp.py  app_rp2.py  config.py
flask_rp/templates/: index.html
keys/: local.crt  local.csr  local.key  rootCA.crt  rootCA.key  rootCA.srl  signing_key.pem  signing_key.pub
tests/: config.py  conftest.py  test_factory.py
