[tool.poetry]
name = "flask-op"
version = "0.1.0"
description = ""
authors = ["Thomas Guyader <laboitatom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyop = "^3.1.0"
Flask = "^1.1.2"
oic = "1.2.1"
Flask-Login = "^0.5.0"
ansicolors = "^1.1.8"
rfc3339 = "^6.2"
Flask-Session = "^0.3.2"

[tool.poetry.dev-dependencies]
gunicorn = "^20.0.4"
Authlib = "^0.15.3"
black = "^20.8b1"
Flask-DebugToolbar = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
