[tool.poetry]
name = "flask-op"
version = "0.1.0"
description = ""
authors = ["Thomas Guyader <laboitatom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyop = "^3.1.0"
Flask = "^1.1.2"
oic = "1.2.1"
ansicolors = "^1.1.8"
rfc3339 = "^6.2"
Flask-Session = "^0.3.2"
Flask-DebugToolbar = "^0.11.0"

[tool.poetry.dev-dependencies]
gunicorn = "^20.0.4"
Authlib = "^0.15.3"
black = "^20.8b1"
mkinit = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 150
target-version = ['py38']
