[tool.poetry]
name = "flask-op"
version = "0.1.0"
description = ""
authors = ["Thomas Guyader <laboitatom@gmail.com>"]
packages = [
    { include = "flask_op" },
]

[tool.poetry.dependencies]
python = "^3.8"
pyop = "^3.1.0"
Flask = "^2.3.2"
oic = "1.2.1"
ansicolors = "^1.1.8"
rfc3339 = "^6.2"
Flask-Session = "^0.3.2"


[tool.poetry.dev-dependencies]
Authlib = "^0.15.3"
black = "^20.8b1"
mkinit = "^0.3.1"
gunicorn = "^20.0.4"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 150
target-version = ['py38']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]